--- a/public/forms.html
+++ b/public/forms.html
@@ -7,7 +7,7 @@
     <!-- This form is hidden and only used for Netlify detection -->
     <form name="contact-form" method="POST" data-netlify="true" style="display: none;">
         <input type="hidden" name="form-name" value="contact-form" />
-        <select name="I'm interested in">
+        <select name="I am interested in">
             <option value="Learning more">Learning more</option>
             <option value="Advocating for cultural access">Advocating for cultural access</option>
             <option value="Joining KCA">Joining KCA</option>
