--- a/public/test-form.html
+++ b/public/test-form.html
@@ -37,7 +37,7 @@
         
         <p>
             <label for="interested">I am interested in:</label>
-            <select name="I'm interested in" id="interested">
+            <select name="I am interested in" id="interested">
                 <option value="Learning more">Learning more</option>
                 <option value="Advocating for cultural access">Advocating for cultural access</option>
                 <option value="Joining KCA">Joining KCA</option>
