--- a/public/forms.html
+++ b/public/forms.html
@@ -4,10 +4,10 @@
     <title>Forms for Netlify Detection</title>
 </head>
 <body>
-    <!-- This form is hidden and only used for Netlify detection -->
+    <!-- This form must match your React form exactly -->
     <form name="contact-form" method="POST" data-netlify="true" style="display: none;">
         <input type="hidden" name="form-name" value="contact-form" />
-        <select name="I am interested in">
+        <select name="interest">
             <option value="Learning more">Learning more</option>
             <option value="Advocating for cultural access">Advocating for cultural access</option>
             <option value="Joining KCA">Joining KCA</option>
